# kittens_exhibition

./: .env  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  db.json  db.sqlite3  pyproject.toml  supervisord.conf
backend/api/: urls.py
backend/backend/: settings.py  urls.py
backend/core/: constants.py  validators.py
backend/kittens/: admin.py  filters.py  models.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
backend/kittens/migrations/: 0001_initial.py  0002_initial.py  0003_alter_kitten_options.py
backend/users/: admin.py  models.py  permissions.py  schemas.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
nginx/: nginx.conf
